[#7] Use Collectors.toList() for Java 11 compatibility